<resources>
    <string name="app_name">Chat</string>
    <string name="ico_user">&#xf007;</string>
    <string name="ico_users">&#xf0c0;</string>
    <string name="ico_user_plus">&#xf234;</string>
    <string name="ico_user_cancel">&#xf235;</string>
    <string name="ico_user_check">&#xf4fc;</string>
    <string name="ico_user_remove">&#xf503;</string>
    <string name="ico_user_times">&#xf4fd;</string>
    <string name="ico_edit">&#xf044;</string>
    <string name="ico_ellipsis_v">&#xf142;</string>
    <string name="ico_lock">&#xf023;</string>
    <string name="ico_clock">&#xf017;</string>
    <string name="ico_id_card">&#xf2c2;</string>
    <string name="ico_phone">&#xf095;</string>
    <string name="ico_mail">&#xf0e0;</string>
    <string name="ico_birth">&#xf1fd;</string>
    <string name="ico_bookmark">&#xf02e;</string>
    <string name="ico_eye">&#xf06e;</string>
    <string name="ico_heart">&#xf004;</string>
    <string name="ico_comment">&#xf075;</string>
    <string name="ico_star">&#xf005;</string>
    <string name="ico_star_half">&#xf5c0;</string>
    <string name="ico_marker">&#xf3c5;</string>
    <string name="ico_street_view">&#xf21d;</string>
    <string name="ico_business_time">&#xf64a;</string>
    <string name="ico_road">&#xf018;</string>
    <string name="ico_paper">&#xf1d8;</string>
    <string name="ico_dot_circle">&#xf192;</string>
    <string name="ico_caret_down">&#xf0d7;</string>
    <string name="ico_caret_up">&#xf0d8;</string>
    <string name="ico_arrow_left">&#xf060;</string>
    <string name="ico_search">&#xf002;</string>
    <string name="ico_link">&#xf0c1;</string>
    <string name="ico_times_circle">&#xf057;</string>
    <string name="ico_chanel">&#xf086;</string>
    <string name="ico_contact">&#xf2b9;</string>
    <string name="ico_profile">&#xf2bd;</string>
    <string name="ico_cog">&#xf013;</string>
    <string name="ico_media">&#xf87c;</string>
    <string name="ico_check">&#xf00c;</string>
    <string name="ico_times">&#xf00d;</string>
    <string name="ico_out">&#xf2f5;</string>
    <string name="ico_key">&#xf084;</string>

    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_password">Password</string>
    <string name="txt_username">Username</string>
    <string name="txt_code">Code</string>
    <string name="txt_re_password">Password Confirm</string>
    <string name="txt_full_name">Full name</string>
    <string name="txt_phone">Your phone</string>
    <string name="txt_mail">Your mail</string>
    <string name="txt_birth_day">Birth day</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_rate_ex">(4.5/5)</string>
    <string name="reply">Reply</string>
</resources>