<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activity.HomeActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#F1F1F1"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/twa_btn_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.vn.chat.common.view.icon.TextViewAwsRe
        android:id="@+id/twa_btn_chanel"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/ico_chanel"
        android:textColor="@color/black"
        android:textSize="@dimen/ico_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/twa_btn_group"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.vn.chat.common.view.icon.TextViewAwsRe
        android:id="@+id/twa_btn_group"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/ico_users"
        android:textColor="@color/black"
        android:textSize="@dimen/ico_large"
        app:layout_constraintBottom_toBottomOf="@+id/twa_btn_chanel"
        app:layout_constraintEnd_toStartOf="@+id/twa_btn_contact"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/twa_btn_chanel"
        app:layout_constraintTop_toTopOf="@+id/twa_btn_chanel" />

    <com.vn.chat.common.view.icon.TextViewAwsRe
        android:id="@+id/twa_btn_contact"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/ico_contact"
        android:textColor="@color/black"
        android:textSize="@dimen/ico_large"
        app:layout_constraintBottom_toBottomOf="@+id/twa_btn_group"
        app:layout_constraintEnd_toStartOf="@+id/twa_btn_profile"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/twa_btn_group"
        app:layout_constraintTop_toTopOf="@+id/twa_btn_group" />

    <com.vn.chat.common.view.icon.TextViewAwsRe
        android:id="@+id/twa_btn_profile"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/ico_profile"
        android:textColor="@color/black"
        android:textSize="@dimen/ico_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/twa_btn_contact"
        app:layout_constraintTop_toTopOf="@+id/twa_btn_contact" />
</androidx.constraintlayout.widget.ConstraintLayout>