<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="90dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:elevation="12dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_thumb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Lốc xoáy 20-10"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <com.vn.chat.common.view.icon.TextViewAwsRe
        android:id="@+id/btn_edit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/ico_edit"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />


    <LinearLayout
        android:id="@+id/btn_media_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_border"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit">

        <com.vn.chat.common.view.icon.TextViewAwsSo
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/ico_media" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Media list" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_members"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_media_list">

        <com.vn.chat.common.view.icon.TextViewAwsSo
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/ico_users" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Members" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_request_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_members">

        <com.vn.chat.common.view.icon.TextViewAwsSo
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/ico_user_times" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Request list" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_add_to_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_request_list">

        <com.vn.chat.common.view.icon.TextViewAwsSo
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/ico_user_plus" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add to group" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_out_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_to_group">

        <com.vn.chat.common.view.icon.TextViewAwsSo
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textColor="@color/color_orange"
            android:text="@string/ico_out" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_orange"
            android:text="Out group" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>