<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@drawable/bg_shadow">

    <CheckBox
        android:id="@+id/cb_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="12dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintStart_toEndOf="@+id/cb_check"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_thumb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="My Cloud"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <TextView
        android:id="@+id/tv_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="v1@gmail.com"
        android:textSize="@dimen/text_small"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <com.vn.chat.common.view.icon.TextViewAwsSo
        android:id="@+id/btn_request"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:textSize="@dimen/ico_large"
        android:text="@string/ico_user_plus"
        android:textColor="@color/color_green"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <com.vn.chat.common.view.icon.TextViewAwsSo
        android:id="@+id/btn_accept"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/ico_user_check"
        android:textColor="@color/color_green"
        android:textSize="@dimen/ico_large"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_reject"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <com.vn.chat.common.view.icon.TextViewAwsSo
        android:id="@+id/btn_reject"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:textSize="@dimen/ico_large"
        android:text="@string/ico_user_cancel"
        android:textColor="@color/color_orange"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <com.vn.chat.common.view.icon.TextViewAwsSo
        android:id="@+id/btn_remove"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:textSize="@dimen/ico_large"
        android:text="@string/ico_user_remove"
        android:textColor="@color/color_orange"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView" />
</androidx.constraintlayout.widget.ConstraintLayout>