<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1">

    <LinearLayout
        android:id="@+id/view_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/bg_et_comment"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="@null"
            android:gravity="center|left"
            android:hint="Search"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="13sp"
            android:textStyle="italic" />

        <com.vn.chat.common.view.icon.TextViewAwsSo
            android:id="@+id/btn_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/ico_search"
            android:textColor="@color/color_blue"
            android:textSize="15sp" />

        <com.vn.chat.common.view.icon.TextViewAwsSo
            android:id="@+id/btn_close_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/ico_times"
            android:textColor="@color/color_orange"
            android:textSize="15sp" />
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingVertical="4dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_search">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_file_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:lines="1"
            android:visibility="gone"
            android:textSize="@dimen/text_small"
            app:layout_constraintEnd_toStartOf="@+id/twa_remove_file"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.vn.chat.common.view.icon.TextViewAwsSo
            android:id="@+id/twa_remove_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ico_times_circle"
            android:textColor="#F00"
            android:paddingHorizontal="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_file_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_file_info" />

        <TextView
            android:id="@+id/tv_target_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:textSize="@dimen/text_small"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/twa_remove_target"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_file_info" />

        <com.vn.chat.common.view.icon.TextViewAwsSo
            android:id="@+id/twa_remove_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ico_times_circle"
            android:textColor="#F00"
            android:paddingHorizontal="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_target_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_target_info" />


        <EditText
            android:id="@+id/et_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_attach"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_attach" />


        <ImageView
            android:id="@+id/iv_attach"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/attach_file"
            app:layout_constraintBottom_toBottomOf="@+id/iv_send"
            app:layout_constraintEnd_toStartOf="@+id/iv_send"
            app:layout_constraintTop_toTopOf="@+id/iv_send" />

        <ImageView
            android:id="@+id/iv_send"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_target_info" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>